
PROJECT(eastl)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    ADD_DEFINITIONS(-DTARGET_PLATFORM_WINDOWS)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    ADD_DEFINITIONS(-DTARGET_PLATFORM_LINUX)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")


FILE(GLOB EASTL_EABASE_HEADERS         "base/*.h")
FILE(GLOB EASTL_EABASE_CONFIG_HEADERS  "base/config/*.h")
FILE(GLOB EASTL_EASTL_HEADERS          "*.h")
FILE(GLOB EASTL_EASTL_INTERNAL_HEADERS "internal/*.h")
FILE(GLOB EASTL_EASTL_EXTRA_HEADERS "extra/*.h")
FILE(GLOB EASTL_EASTL_EXTRA_SOURCES "extra/*.cpp")
FILE(GLOB EASTL_EASTL_EXTRA_NEDMALLOC_HEADERS "extra/nedmalloc/*.h")
FILE(GLOB EASTL_EASTL_EXTRA_NEDMALLOC_SOURCES "extra/nedmalloc/*.cpp")

FILE(GLOB EASTL_SOURCES                "*.cpp")

SET(EASTL_HEADERS
   ${EASTL_EABASE_HEADERS}
   ${EASTL_EABASE_CONFIG_HEADERS}
   ${EASTL_EASTL_HEADERS}
   ${EASTL_EASTL_INTERNAL_HEADERS}
   ${EASTL_EASTL_EXTRA_HEADERS}
   ${EASTL_EASTL_EXTRA_NEDMALLOC_HEADERS}
)
SET(EASTL_SOURCES
   ${EASTL_SOURCES}
   ${EASTL_EASTL_EXTRA_SOURCES}
   ${EASTL_EASTL_EXTRA_NEDMALLOC_SOURCES}
)

ADD_LIBRARY(eastl ${EASTL_HEADERS} ${EASTL_SOURCES})
